--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <title>Text Formatting</title>
 </head>
 <body>
-  Hello World
+  <p>
+    <em>Hello World</em>
+  </p>
   
-  Hello Moon
+  <p>Hello Moon</p>
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
   Text Formatting in HTML
 
