--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Text Formatting</title>
 </head>
 <body>
+  <h1>Text Formatting</h1>
   <p>
     <em>Hello World</em>
     <strong>Warning!</strong>
