--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Text Formatting</h1>
+  <h2>A love Story</h2>
   <p>
     <em>Hello World</em>
     <strong>Warning!</strong>
