Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
 <body>
   <h1>Text Formatting</h1>
   <h2>A love Story</h2>
-  <p>
-    <em>Hello World</em>
-    <strong>Warning!</strong>
-  </p>
+  <h3>Capter one</h3>
   
-  <p>Hello Moon</p>
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
   Text Formatting in HTML
 
